--- a/custom.css
+++ b/custom.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   flex-grow: 1;
   width: 100%;
   background-color: rgb(39,41,52);
@@ -53,6 +54,10 @@
   background-color: rgb(39,41,52); 
 }
 
+#answerLetters {
+  margin-top: 10px;
+}
+
 #solution {
   display: flex;
   text-align: center;
@@ -68,7 +73,6 @@ body {
   color: white;
   background-color: rgb(39,41,52);
   font-family: 'Roboto';
-  overflow: hidden;
 }
 
 h1 {
